--- a/src/themes/clean.scss
+++ b/src/themes/clean.scss
@@ -276,7 +276,7 @@ $images: "./../../assets";
     top: -1px;
     bottom: -2px;
     z-index: 2;
-    width: 7px;
+        width: 178px;
 }
 
 .day {
